<resources>
    <string name="app_name">examplenavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hint">hint</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="my_profile">main</string>
    <string name="help">pass</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="app_version">App version</string>
    <string name="_83_0_4103_65">83.0.4103.65</string>
    <string name="chrome">Chrome</string>
    <string name="todo">TODO</string>
    <string name="apk_name">APK name</string>
    <string name="com_android_chrome">com.android.chrome</string>
    <string name="chrome">Chrome</string>
    <string name="app_name1">App name</string>
    <string name="application_info">Application Info</string>
    <string name="todo">TODO</string>
    <string name="_2020_05_31_20_20_01">2020/05/31 20:20:01</string>
    <string name="google_play_store">Google Play Store</string>
    <string name="last_update_time">Last update time</string>
    <string name="todo">TODO</string>
    <string name="last_update_source">Last update source</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="secure">Secure</string>
    <string name="password">Password</string>
    <string name="or_connect_with">or connect with</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="user_name">User Name</string>
    <string name="prizm">Prizm</string>
    <string name="secure1">SECURE</string>
    <string name="prizm1">PRIZM</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in1">Log in</string>
    <string name="todo">TODO</string>
    <string name="cpu_total">CPU Total</string>
    <string name="_0_52">0.52%</string>
    <string name="_0s">0s</string>
    <string name="todo">TODO</string>
    <string name="battery">Battery</string>
    <string name="total">Total</string>
    <string name="keep_awake">Keep Awake</string>
    <string name="_39s">39s</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="phone_messages_and_contacts">phone,messages and contacts</string>
    <string name="other_permissions">Other Permissions</string>
    <string name="manage_permissions_related_to_location_storage">Manage permissions related to location,storage,</string>
    <string name="app_permissions">App Permissions</string>
    <string name="todo">TODO</string>
    <string name="permissions">Permissions</string>
    <string name="todo">TODO</string>
    <string name="chrome">Chrome</string>
    <string name="todo">TODO</string>
    <string name="notification">Notification</string>
    <string name="general">GENERAL</string>
    <string name="notification_3">Notification 3</string>
    <string name="notification_4">Notification 4</string>
    <string name="notification_2">Notification 2</string>
    <string name="notification1">Notification1</string>
    <string name="_21">21</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="total_notification_count">Total Notification Count</string>
    <string name="todo">TODO</string>
    <string name="_752mb">752MB</string>
    <string name="_206mb">206MB</string>
    <string name="cache">Cache</string>
    <string name="user_data">User data</string>
    <string name="app_size">App Size</string>
    <string name="battery">Battery</string>
    <string name="_502mb">502MB</string>
    <string name="_0_96gb">0.96GB</string>
    <string name="total">Total</string>
    <string name="todo">TODO</string>
    <string name="app6">App6</string>
    <string name="app4">App4</string>
    <string name="app3">App3</string>
    <string name="app2">App2</string>
    <string name="app1">APP1</string>
    <string name="chrome">Chrome</string>
    <string name="app4">App4</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="all">All</string>
    <string name="discover_apps">Discover Apps</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="application_info">Application Info</string>
    <string name="device_usages">Device Usages</string>
    <string name="notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="contacts">Contacts</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage</string>
    <string name="microphone">Microphone</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="battery">Battery</string>
    <string name="data_usage">Data usage</string>
    <string name="storage">Storage</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="version_83_0_51_7104_94">Version 83.0.51.7104.94</string>
    <string name="chrome">Chrome</string>
</resources>